--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -73,4 +73,13 @@ layout: default
       </div>
     {% endif %}
   </article>
+
+
+
+  <header class="post-header">
+    <h1 class="post-title">working papers</h1>
+    <p class="post-description">{{ page.description }}</p>
+  </header>
+
+
 </div>
