--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -78,7 +78,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">working papers</h1>
-    <p class="post-description">{{ page.description }}</p>
+    <p class="post-description"> </p>
   </header>
 
 
